--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AppLazada</string>
+    <string name="open">Mở</string>
+    <string name="close">Đóng</string>
 </resources>
