đăng nhập bằng tài khoản google

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,5 @@
     <string name="close">Đóng</string>
     <string name="facebook_app_id">679785572834418</string>
     <string name="fb_login_protocol_scheme">fb679785572834418</string>
-
+    <string name="google_plus_client">709686995560-apvi90qa38epee7jp51osbk5k5n42j74.apps.googleusercontent.com</string>
 </resources>
